<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Дневник тренировок</string>
    <string name="app_label">Workout Journal</string>
    <string name="main_window_title">Тренировки</string>
    <string name="history_title">История</string>
    <string name="history_list_item_name">Название тренировки</string>
    <string name="history_list_item_date">дд.мм.гггг</string>
    <string name="empty_string"/>
    <string name="workout_name">Тренировка</string>
    <string name="workout_creation">Создание тренировки</string>
    <string name="workout_start">Начать</string>
    <string name="exercise_name">Упражнение</string>
    <string name="exercises_list">Упражнения</string>
    <string name="exercise_info">Описание упражнения</string>
    <string name="main_title">Тренировки</string>
    <string name="dlg_workout_name">Введите название</string>
    <string name="dlg_set">Введите параметры</string>
    <string name="dlg_kg">Вес</string>
    <string name="dlg_reps">Повторения</string>
    <string name="reiterations">Повторений:</string>
    <string name="sets_short">Повтор.:</string>
    <string name="kg">кг</string>
    <string name="times">раз</string>
    <string name="weight">Вес:</string>
    <string name="help_title">Помощь</string>
    <string name="help_text">Приходит из самых неожиданных источников.</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="training_name">Название тренировки</string>
    <string name="training_creating">Создание тренировки</string>
    <string name="sets_creating">Добавление подходов</string>
    <string name="finish_training">Окончание тренировки</string>
    <string name="finish_training_question">Закончить тренировку?</string>


    <string-array name="trainings">
        <item>Тренировка 1</item>
        <item>Тренировка 2</item>
        <item>Тренировка 3</item>
        <item>Тренировка 4</item>
        <item>Тренировка 5</item>
        <item>Тренировка 6</item>
        <item>Тренировка 7</item>
        <item>Тренировка 8</item>
        <item>Тренировка 9</item>
        <item>Тренировка 10</item>
        <item>Тренировка 11</item>
        <item>Тренировка 12</item>
    </string-array>
    <string-array name="trainings_part1">
        <item>Тренировка 1</item>
        <item>Тренировка 2</item>
        <item>Тренировка 3</item>
        <item>Тренировка 4</item>
        <item>Тренировка 5</item>
    </string-array>

    <string-array name="trainings_part2">
        <item>Тренировка 1</item>
        <item>Тренировка 2</item>
        <item>Тренировка 3</item>
        <item>Тренировка 4</item>
        <item>Тренировка 5</item>
    </string-array>

    <string-array name="exercises">
        <item>Упражнение 1</item>
        <item>Упражнение 2</item>
        <item>Упражнение 3</item>
        <item>Упражнение 4</item>
        <item>Упражнение 5</item>
        <item>Упражнение 6</item>
        <item>Упражнение 7</item>
        <item>Упражнение 8</item>
        <item>Упражнение 9</item>
        <item>Упражнение 10</item>
        <item>Упражнение 11</item>
        <item>Упражнение 12</item>
        <item>Упражнение 13</item>
    </string-array>

</resources>
