<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:textColor="#000"
             android:paddingStart="40dp"
             android:background="@color/light_gray_2">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="18sp"
                android:textColor="#000"
                />

        <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewWeight"
                android:hint="@string/kg"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reiterations"
                android:textSize="18sp"
                android:textColor="#000"

                />


        <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewReiterations"
                android:hint="@string/times"
                android:text="@string/empty_string"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textColor="#000"/>

        <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:button="@drawable/check_selector"
                android:checked="false"/>

</LinearLayout>