<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/light_gray_1"
              android:weightSum="1"
              android:baselineAligned="false">

    <FrameLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="#ffa500">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dlg_set"
                android:id="@+id/textView2"
                android:layout_gravity="center"
                android:textSize="25sp"
                />
    </FrameLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:paddingBottom="10dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

            <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/dlg_reps"
                    android:id="@+id/textViewReps"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_vertical"/>

            <EditText
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:maxLength="4"
                    android:id="@+id/editReps"
                    style="@style/EditTextAppTheme"
                    android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp">

            <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/dlg_kg"
                    android:id="@+id/textViewWeight"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

            <EditText
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editWeight"
                    android:maxLength="6"
                    android:numeric="decimal"
                    style="@style/EditTextAppTheme"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="10dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>